tests/fixtures/type_checker/error/return_expected_if.galaxy
int return_expected_if()
{
    if (false) {
        return 1;
    }
}
